plugins {
    id "maven-publish"
    id "java-library"
    id "io.freefair.lombok" version "8.6"
    id "signing"
    id "io.github.gradle-nexus.publish-plugin" version "1.3.0"
    id 'com.vanniktech.maven.publish' version '0.30.0'
}

group 'ai.chalk'
version = project.hasProperty("version") ? project.getProperty("version") : "0.0.0"

repositories {
    mavenCentral()
}

def versions = [
    grpcVersion: '1.64.0',
    arrowVersion: '17.0.0',
    jacksonVersion: '2.15.2',
    protobufVersion: '3.25.1'
]

dependencies {
    api "com.fasterxml.jackson.core:jackson-databind:${versions.jacksonVersion}"
    api "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${versions.jacksonVersion}"
    api "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${versions.jacksonVersion}"
    api "com.google.protobuf:protobuf-java:${versions.protobufVersion}"
    api "io.grpc:grpc-core:${versions.grpcVersion}"
    api "io.grpc:grpc-protobuf:${versions.grpcVersion}"
    api "io.grpc:grpc-stub:${versions.grpcVersion}"
    api "io.grpc:grpc-netty-shaded:${versions.grpcVersion}"
    api "org.apache.arrow:arrow-compression:${versions.arrowVersion}"
    api "org.apache.arrow:arrow-memory-netty:${versions.arrowVersion}"
    api "org.apache.arrow:arrow-vector:${versions.arrowVersion}"
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
    testImplementation 'org.slf4j:slf4j-simple:2.0.9'
}

test {
    useJUnitPlatform()
    jvmArgs '--add-opens=java.base/java.nio=ALL-UNNAMED'
    testLogging {
        // Ensure that the standard output from the tests is shown in CI logs
        showStandardStreams = true
        events "passed", "skipped", "failed"
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

def configurePom = { pom ->
    pom.name = 'Chalk Java'
    pom.description = 'The Java client for Chalk'
    pom.url = 'https://github.com/chalk-ai/chalk-java'

    pom.licenses {
        license {
            name = 'The Apache License, Version 2.0'
            url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
        }
    }

    pom.developers {
        developer {
            id = 'chalk-ai'
            name = 'Chalk'
            email = 'support@chalk.ai'
        }
    }

    pom.scm {
        connection = 'scm:git:git://github.com/chalk-ai/chalk-java.git'
        developerConnection = 'scm:git:ssh://github.com:chalk-ai/chalk-java.git'
        url = 'https://github.com/chalk-ai/chalk-java/'
    }
}

import com.vanniktech.maven.publish.SonatypeHost

mavenPublishing {
    publishToMavenCentral(SonatypeHost.CENTRAL_PORTAL, true)

    signAllPublications()

    coordinates(project.group.toString(), project.name, project.version.toString())

    pom {
        name = 'Chalk Java'
        description = 'The Java client for Chalk'
        url = 'https://github.com/chalk-ai/chalk-java'

        licenses {
            license {
                name = 'The Apache License, Version 2.0'
                url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
            }
        }

        developers {
            developer {
                id = 'chalk-ai'
                name = 'Chalk'
                email = 'support@chalk.ai'
            }
        }

        scm {
            connection = 'scm:git:git://github.com/chalk-ai/chalk-java.git'
            developerConnection = 'scm:git:ssh://github.com:chalk-ai/chalk-java.git'
            url = 'https://github.com/chalk-ai/chalk-java/'
        }
    }
}